Fixed spacing with mark ticket as complete section

--- a/application/assets/css/styles.css
+++ b/application/assets/css/styles.css
@@ -1197,7 +1197,7 @@ input.inp-lst {
 
 #form-reply label {
 	display: block;
-	margin-bottom: 10px;
+	margin: 20px 0 30px 0;
 	line-height: 14px;
 }
 
